<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/set_ip_text"
        android:layout_width="210dp"
        android:layout_height="50dp"
        android:layout_marginStart="16dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:text="@string/set_ip_text"
        android:textSize="14sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/set_ip_bttn"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/set_ip_bttn"
        android:layout_width="110dp"
        android:layout_height="50dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:onClick="updateIp"
        android:text="@string/set_ip_bttn"
        android:textSize="11sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/set_port_text"
        android:layout_width="210dp"
        android:layout_height="50dp"
        android:layout_marginStart="16dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:text="@string/set_port_text"
        android:textSize="14sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/set_port_bttn"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/set_port_bttn"
        android:layout_width="110dp"
        android:layout_height="50dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:onClick="updatePort"
        android:text="@string/set_port_bttn"
        android:textSize="11sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/set_ip_bttn" />

    <Button
        android:id="@+id/connect_bttn"
        android:layout_width="110dp"
        android:layout_height="50dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:backgroundTint="@android:color/holo_green_dark"
        android:onClick="connect"
        android:text="@string/connect_bttn"
        android:textSize="11sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/set_port_bttn" />

    <Button
        android:id="@+id/pb2_bttn"
        android:layout_width="65dp"
        android:layout_height="50dp"
        android:layout_marginStart="12dp"
        android:backgroundTint="@android:color/black"
        android:onClick="bttn2"
        android:text="@string/pb2_bttn"
        android:textSize="11sp"
        android:textStyle="bold"
        app:layout_constraintBaseline_toBaselineOf="@+id/pb3_bttn"
        app:layout_constraintStart_toEndOf="@+id/pb1_bttn" />

    <Button
        android:id="@+id/pb1_bttn"
        android:layout_width="65dp"
        android:layout_height="50dp"
        android:layout_marginStart="16dp"
        android:backgroundTint="@android:color/black"
        android:onClick="bttn1"
        android:text="@string/pb1_bttn"
        android:textSize="11sp"
        android:textStyle="bold"
        app:layout_constraintBaseline_toBaselineOf="@+id/pb2_bttn"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/pb3_bttn"
        android:layout_width="65dp"
        android:layout_height="50dp"
        android:layout_marginStart="12dp"
        android:backgroundTint="@android:color/black"
        android:onClick="bttn3"
        android:text="@string/pb3_bttn"
        android:textSize="11sp"
        android:textStyle="bold"
        app:layout_constraintBaseline_toBaselineOf="@+id/connect_bttn"
        app:layout_constraintStart_toEndOf="@+id/pb2_bttn" />

    <Button
        android:id="@+id/disconnect_bttn"
        android:layout_width="110dp"
        android:layout_height="50dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:backgroundTint="@android:color/holo_red_light"
        android:onClick="disconnect"
        android:text="@string/disconnect_bttn"
        android:textSize="11sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/connect_bttn" />

    <Button
        android:id="@+id/get_temp_bttn"
        android:layout_width="110dp"
        android:layout_height="50dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:backgroundTint="@android:color/holo_blue_light"
        android:onClick="getTemp"
        android:text="@string/get_temp_bttn"
        android:textSize="11sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/getTime"
        app:layout_constraintTop_toBottomOf="@+id/disconnect_bttn" />

    <EditText
        android:id="@+id/message_window"
        android:layout_width="0dp"
        android:layout_height="305dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:background="@android:color/darker_gray"
        android:ems="10"
        android:gravity="start|top"
        android:inputType="textMultiLine"
        android:text="@string/message_window"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/get_temp_bttn"
        tools:ignore="SpeakableTextPresentCheck" />

    <Button
        android:id="@+id/clear_msgs"
        android:layout_width="120dp"
        android:layout_height="50dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="12dp"
        android:backgroundTint="@android:color/darker_gray"
        android:onClick="clearMsgs"
        android:text="@string/clear_msgs"
        android:textColor="#4E342E"
        android:textSize="11sp"
        android:textStyle="bold"
        app:layout_constraintBaseline_toBaselineOf="@+id/getTime"
        app:layout_constraintEnd_toStartOf="@+id/getTime"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/getTime"
        android:layout_width="94dp"
        android:layout_height="50dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="12dp"
        android:backgroundTint="@android:color/holo_blue_light"
        android:onClick="getTime"
        android:text="@string/getTime"
        android:textSize="11sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/get_temp_bttn"
        app:layout_constraintEnd_toStartOf="@+id/get_temp_bttn"
        app:layout_constraintStart_toEndOf="@+id/clear_msgs" />

    <Switch
        android:id="@+id/led1_bttn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:minHeight="48dp"
        android:onClick="led1"
        android:text="@string/led1_bttn"
        app:layout_constraintBaseline_toBaselineOf="@+id/led2_bttn"
        app:layout_constraintStart_toStartOf="parent" />

    <Switch
        android:id="@+id/led2_bttn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:minHeight="48dp"
        android:onClick="led2"
        android:text="@string/led2_bttn"
        app:layout_constraintBaseline_toBaselineOf="@+id/led3_bttn"
        app:layout_constraintStart_toEndOf="@+id/led1_bttn" />

    <Switch
        android:id="@+id/led3_bttn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:minHeight="48dp"
        android:onClick="led3"
        android:text="@string/led3_bttn"
        app:layout_constraintBaseline_toBaselineOf="@+id/disconnect_bttn"
        app:layout_constraintStart_toEndOf="@+id/led2_bttn" />

</androidx.constraintlayout.widget.ConstraintLayout>